import and setup font

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     
-    
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <h1>Hellow bangladesh</h1>
+        </div>
+    </footer>
 </body>
 </html>
