add footer sass file

--- a/index.html
+++ b/index.html
@@ -1,19 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <!-- Footer -->
     <footer>
-        <div class="container">
-            <h1>Hellow bangladesh</h1>
+      <div class="container">
+        <div class="about-company">
+          <h5>About the company</h5>
+          <p class="common-pera-14">
+            Learn To Love Growth And Change And You Will Be A Success. Microsoft
+            Patch
+          </p>
+          <ul>
+            <li>
+              <a href="">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <i class="fa-brands fa-youtube"></i>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+            </li>
+          </ul>
         </div>
+        <ul>
+            <h5>Products</h5>
+            <li><a href="">CSR Activities</a></li>
+            <li><a href="">Green Banking</a></li>
+            <li><a href="">News</a></li>
+            <li><a href="">Ongoing Campgain</a></li>
+            <li><a href="">Updates</a></li>
+        </ul>
+        <ul>
+            <h5>Get Started</h5>
+            <li><a href="">Career</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Government Securities</a></li>
+            <li><a href="">Examples</a></li>
+            <li><a href="">NIS</a></li>
+        </ul>
+        <ul>
+            <h5>About</h5>
+            <li><a href="">IPDC at a Glance</a></li>
+            <li><a href="">Mission, VIsion & Values</a></li>
+            <li><a href="">Corporate Governanace</a></li>
+            <li><a href="">Shareholders</a></li>
+            <li><a href="">Investor Relations</a></li>
+        </ul>
+      </div>
     </footer>
-</body>
+
+    <!-- Font Awasome -->
+    <script
+      src="https://kit.fontawesome.com/6a0418856e.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
