complete full responsive newsletter section

--- a/index.html
+++ b/index.html
@@ -8,14 +8,101 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <!-- Our Services -->
+    <section id="our-services">
+      <div class="container">
+        <div class="heading-wrap">
+          <h2>Our Services</h2>
+          <p class="common-pera-16">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam,
+            dapibus mattis vel feugiat erat tortor eleifend.
+          </p>
+        </div>
+        <div class="card-wrap">
+          <div class="card">
+            <div>
+              <img src="./images/schemes-img.png" alt="" />
+            </div>
+            <div>
+              <h3>IPDC SAVING SCHEMES</h3>
+              <button>
+                <a href="">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </a>
+              </button>
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img src="./images/ipdc-personal-loan.png" alt="" />
+            </div>
+            <div>
+              <h3>IPDC Personal loan</h3>
+              <button>
+                <a href="">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </a>
+              </button>
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img src="./images/ipdc-deposit-schemes.png" alt="" />
+            </div>
+            <div>
+              <h3>IPDC Deposit schemes</h3>
+              <button>
+                <a href="">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </a>
+              </button>
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img src="./images/ipdc-auto-loan.png" alt="" />
+            </div>
+            <div>
+              <h3>IPDC auto loan</h3>
+              <button>
+                <a href="">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </a>
+              </button>
+            </div>
+          </div>
+          <button id="see-more">
+            <a href="">SEE MORE</a>
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <!-- Newsletter -->
+    <section id="newsletter">
+      <div class="container">
+        <h2>Newsletter</h2>
+        <p class="common-pera-16">
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing</span>
+          <span>elit. Eget ac quis aliquam arcu lacus.</span>
+        </p>
+        <div class="input-wrap">
+          <input type="email" placeholder="Your email" />
+          <button class="btn"><a href="">Subscribe</a></button>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer -->
     <footer>
       <div class="container">
         <div class="about-company">
           <h5>About the company</h5>
           <p class="common-pera-14">
-            Learn To Love Growth And Change And You Will Be A Success. Microsoft
-            Patch
+            <span>Learn To Love Growth</span>
+            <span>And Change And You Will</span>
+            <span>Be A Success. Microsoft</span>
+            <span>Patch</span>
           </p>
           <ul>
             <li>
@@ -40,30 +127,40 @@
             </li>
           </ul>
         </div>
-        <ul>
-            <h5>Products</h5>
+        <div>
+          <h5>Products</h5>
+          <ul class="list-wrap">
             <li><a href="">CSR Activities</a></li>
             <li><a href="">Green Banking</a></li>
             <li><a href="">News</a></li>
             <li><a href="">Ongoing Campgain</a></li>
             <li><a href="">Updates</a></li>
-        </ul>
-        <ul>
-            <h5>Get Started</h5>
+          </ul>
+        </div>
+        <div>
+          <h5>Get Started</h5>
+          <ul class="list-wrap">
             <li><a href="">Career</a></li>
             <li><a href="">Contact Us</a></li>
             <li><a href="">Government Securities</a></li>
             <li><a href="">Examples</a></li>
             <li><a href="">NIS</a></li>
-        </ul>
-        <ul>
-            <h5>About</h5>
+          </ul>
+        </div>
+        <div>
+          <h5>About</h5>
+          <ul class="list-wrap">
             <li><a href="">IPDC at a Glance</a></li>
             <li><a href="">Mission, VIsion & Values</a></li>
             <li><a href="">Corporate Governanace</a></li>
             <li><a href="">Shareholders</a></li>
             <li><a href="">Investor Relations</a></li>
-        </ul>
+          </ul>
+        </div>
+        <div class="phone">
+          <span><i class="fa-solid fa-phone"></i></span>
+          <span class="common-pera-16">16519</span>
+        </div>
       </div>
     </footer>
 
@@ -72,5 +169,8 @@
       src="https://kit.fontawesome.com/6a0418856e.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Javascript -->
+    <script src="./app.js"></script>
   </body>
 </html>
