--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <!-- Header -->
+    <header>
+      <div class="navber">
+        <div class="container">
+          <div class="nav-header">
+            <img src="./images/main-logo.png" alt="">
+            <button class="toggle-btn">
+              <i class="fa-solid fa-bars-staggered"></i>
+            </button>
+          </div>
+          <div class="links-wrap">
+            <ul>
+              <li><a href="">Retail</a></li>
+              <li><a href="">SME</a></li>
+              <li><a href="">Corporate</a></li>
+              <li><a href="">About Us</a></li>
+              <li><a href="">Covid 19</a></li>
+              <li><a href="">Campgains</a></li>
+            </ul>
+            <ul>
+              <button class="sreach-btn">
+                <span><i class="fa-solid fa-magnifying-glass"></i></span>
+              </button>
+              <button class="btn iservise">
+                <a href="">iSERVICE</a>
+              </button>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <main class=".container">
+
+      </main>
+    </header>
+
     <!-- Our Services -->
     <section id="our-services">
       <div class="container">
