complete full page stacture

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="navber">
         <div class="container">
           <div class="nav-header">
-            <img src="./images/main-logo.png" alt="">
+            <img src="./images/main-logo.png" alt="" />
             <button class="toggle-btn">
               <i class="fa-solid fa-bars-staggered"></i>
             </button>
@@ -38,10 +38,148 @@
           </div>
         </div>
       </div>
-      <main class=".container">
-
-      </main>
+      <main class=".container"></main>
     </header>
+
+    <!-- Customer Experience -->
+    <section id="customer-experience">
+      <div class="container">
+        <div class="heading-wrap">
+          <h3>Creating Extraordinary Customer Experience</h3>
+          <p>
+            <span
+              >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+              bibendum eget morbi</span
+            >
+            <span> dignissim eu pharetra consequat montes, sagittis.</span>
+          </p>
+        </div>
+
+        <div class="cards-wrap">
+          <div class="card">
+            <div class="card-logo">
+              <img src="" alt="" />
+            </div>
+            <h5>Integrity</h5>
+            <p>
+              Displaying the highest level of Integrity in the way we conduct
+              our business
+            </p>
+          </div>
+          <div class="card">
+            <div class="card-logo">
+              <img src="" alt="" />
+            </div>
+            <h5>Demonstrate</h5>
+            <p>Demonstrating a strong Will to Win in the market place</p>
+          </div>
+          <div class="card">
+            <div class="card-logo">
+              <img src="" alt="" />
+            </div>
+            <h5>Diversity</h5>
+            <p>Promoting Diversity in the work place and community</p>
+          </div>
+          <div class="card">
+            <div class="card-logo">
+              <img src="" alt="" />
+            </div>
+            <h5>Teamwork</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. A semper
+              aenean id pen
+            </p>
+          </div>
+          <div class="card">
+            <div class="card-logo">
+              <img src="" alt="" />
+            </div>
+            <h5>Collaboration</h5>
+            <p>
+              Displaying the highest level of Integrity in the way we conduct
+              our business
+            </p>
+          </div>
+          <div class="card">
+            <div class="card-logo">
+              <img src="" alt="" />
+            </div>
+            <h5>Technology</h5>
+            <p>
+              Harnessing the power of Technology to deliver better customer
+              experience
+            </p>
+          </div>
+          <div class="card">
+            <div class="card-logo">
+              <img src="" alt="" />
+            </div>
+            <h5>Corporate</h5>
+            <p>
+              Setting the standard for the best Corporate Citizenship in the
+              communities we work
+            </p>
+          </div>
+          <div class="card">
+            <div class="card-logo">
+              <img src="" alt="" />
+            </div>
+            <h5>Digital</h5>
+            <p>
+              Setting the standard for the best Corporate Citizenship in the
+              communities we work
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Busness Partners -->
+    <!-- <section id="busness-partner">
+      <div class="container">
+        <div class="heading">
+          <p>BUSINESS PARTNERS</p>
+        </div>
+        <div>
+          <img src="./images/westin-img.png" alt="">
+        </div>
+        <div>
+          <img src="./images/ummit-img.png" alt="">
+        </div>
+        <div>
+          <img src="./images/holsim-img.png" alt="">
+        </div>
+        <div>
+          <img src="./images/akusa-img.png" alt="">
+        </div>
+      </div>
+    </section> -->
+
+    <!-- GLANCE -->
+    <section id="glance">
+      <div class="glance-img-wrap">
+        <img src="" alt="" />
+      </div>
+      <div class="glance-content">
+        <h3>IPDC AT A GLANCE</h3>
+        <p>
+          IPDC Finance Limited (previously known as "Industrial Promotion and
+          Development Company of Bangladesh Limited") is the first private
+          sector financial institution of the country established in 1981 by a
+          distinguished group of shareholders namely International Finance
+          Corporation (IFC), USA, German Investment and Development Company
+          (DEG), Germany, The Aga Khan Fund for Economic Development (AKFED),
+          Switzerland, Commonwealth Development Corporation (CDC), UK and the
+          Government of Bangladesh
+        </p>
+        <a href="">
+          <span>read more</span>
+          <span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </span>
+        </a>
+      </div>
+    </section>
 
     <!-- Our Services -->
     <section id="our-services">
@@ -112,6 +250,56 @@
         </div>
       </div>
     </section>
+
+    <!-- Best Result -->
+    <div id="best-result">
+      <div class="container">
+        <div class="heading-wrap">
+          <h3>Our best results for the year</h3>
+          <p class="common-pera-16">
+            <span
+              >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam,
+              dapibus
+            </span>
+            <span>mattis vel feugiat erat tortor eleifend.</span>
+          </p>
+        </div>
+        <div class="card-wrap">
+          <div class="card">
+            <h2>57.6 bn</h2>
+            <p>LOAN PORTFOLIO</p>
+          </div>
+          <div class="card">
+            <h2>0.95%</h2>
+            <p>CLASSIFIED LOAN PORTFOLIO</p>
+          </div>
+          <div class="card">
+            <h2>388.5%</h2>
+            <p>CLASSIFIED LOAN Coverage</p>
+          </div>
+          <div class="card">
+            <h2>50.4 bn</h2>
+            <p>Deposit</p>
+          </div>
+          <div class="card">
+            <h2>6.1 bn</h2>
+            <p>Shareholders equity</p>
+          </div>
+          <div class="card">
+            <h2>18.51%</h2>
+            <p>Capital Adequacy Ratio</p>
+          </div>
+          <div class="card">
+            <h2>8.5 bn</h2>
+            <p>Market Capitalization</p>
+          </div>
+          <div class="card">
+            <h2>AAA</h2>
+            <p>Credit Rating</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Newsletter -->
     <section id="newsletter">
