--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <div id="best-result">
       <div class="container">
         <div class="heading-wrap">
-          <h3>Our best results for the year</h3>
+          <h2>Our best results for the year</h2>
           <p class="common-pera-16">
             <span
               >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam,
@@ -266,36 +266,36 @@
         </div>
         <div class="card-wrap">
           <div class="card">
-            <h2>57.6 bn</h2>
-            <p>LOAN PORTFOLIO</p>
+            <h3>57.6 bn</h3>
+            <p class="common-pera-16">LOAN PORTFOLIO</p>
           </div>
           <div class="card">
-            <h2>0.95%</h2>
-            <p>CLASSIFIED LOAN PORTFOLIO</p>
+            <h3>0.95%</h3>
+            <p class="common-pera-16">CLASSIFIED LOAN PORTFOLIO</p>
           </div>
           <div class="card">
-            <h2>388.5%</h2>
-            <p>CLASSIFIED LOAN Coverage</p>
+            <h3>388.5%</h3>
+            <p class="common-pera-16">CLASSIFIED LOAN Coverage</p>
           </div>
           <div class="card">
-            <h2>50.4 bn</h2>
-            <p>Deposit</p>
+            <h3>50.4 bn</h3>
+            <p class="common-pera-16">Deposit</p>
           </div>
           <div class="card">
-            <h2>6.1 bn</h2>
-            <p>Shareholders equity</p>
+            <h3>6.1 bn</h3>
+            <p class="common-pera-16">Shareholders equity</p>
           </div>
           <div class="card">
-            <h2>18.51%</h2>
-            <p>Capital Adequacy Ratio</p>
+            <h3>18.51%</h3>
+            <p class="common-pera-16">Capital Adequacy Ratio</p>
           </div>
           <div class="card">
-            <h2>8.5 bn</h2>
-            <p>Market Capitalization</p>
+            <h3>8.5 bn</h3>
+            <p class="common-pera-16">Market Capitalization</p>
           </div>
           <div class="card">
-            <h2>AAA</h2>
-            <p>Credit Rating</p>
+            <h3>AAA</h3>
+            <p class="common-pera-16">Credit Rating</p>
           </div>
         </div>
       </div>
