complete the glance section

--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
     <!-- GLANCE -->
     <section id="glance">
       <div class="glance-img-wrap">
-        <img src="" alt="" />
+        <img src="./images/glance-img.png" alt="" />
       </div>
       <div class="glance-content">
-        <h3>IPDC AT A GLANCE</h3>
-        <p>
+        <h2>IPDC AT A GLANCE</h2>
+        <p class="common-pera-16">
           IPDC Finance Limited (previously known as "Industrial Promotion and
           Development Company of Bangladesh Limited") is the first private
           sector financial institution of the country established in 1981 by a
