complete busness partners section

--- a/index.html
+++ b/index.html
@@ -135,25 +135,27 @@
     </section>
 
     <!-- Busness Partners -->
-    <!-- <section id="busness-partner">
+    <section id="busness-partner">
       <div class="container">
         <div class="heading">
           <p>BUSINESS PARTNERS</p>
         </div>
-        <div>
-          <img src="./images/westin-img.png" alt="">
-        </div>
-        <div>
-          <img src="./images/ummit-img.png" alt="">
-        </div>
-        <div>
-          <img src="./images/holsim-img.png" alt="">
-        </div>
-        <div>
-          <img src="./images/akusa-img.png" alt="">
+        <div class="item-wrap">
+          <div class="item">
+            <img src="./images/westin-img.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./images/ummit-img.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./images/holsim-img.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./images/akusa-img.png" alt="" />
+          </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- GLANCE -->
     <section id="glance">
