--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <section id="customer-experience">
       <div class="container">
         <div class="heading-wrap">
-          <h3>Creating Extraordinary Customer Experience</h3>
-          <p>
+          <h2>Creating Extraordinary Customer Experience</h2>
+          <p class="common-pera-16">
             <span
               >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
               bibendum eget morbi</span
@@ -58,74 +58,74 @@
         <div class="cards-wrap">
           <div class="card">
             <div class="card-logo">
-              <img src="" alt="" />
+              <img src="./images/integrity-img.png" alt="" />
             </div>
             <h5>Integrity</h5>
-            <p>
+            <p class="common-pera-14">
               Displaying the highest level of Integrity in the way we conduct
               our business
             </p>
           </div>
           <div class="card">
             <div class="card-logo">
-              <img src="" alt="" />
+              <img src="./images/demonstrate-img.png" alt="" />
             </div>
             <h5>Demonstrate</h5>
-            <p>Demonstrating a strong Will to Win in the market place</p>
+            <p class="common-pera-14">Demonstrating a strong Will to Win in the market place</p>
           </div>
           <div class="card">
             <div class="card-logo">
-              <img src="" alt="" />
+              <img src="./images/diversity-img.png" alt="" />
             </div>
             <h5>Diversity</h5>
-            <p>Promoting Diversity in the work place and community</p>
+            <p class="common-pera-14">Promoting Diversity in the work place and community</p>
           </div>
           <div class="card">
             <div class="card-logo">
-              <img src="" alt="" />
+              <img src="./images/teamwork-img.png" alt="" />
             </div>
             <h5>Teamwork</h5>
-            <p>
+            <p class="common-pera-14">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. A semper
               aenean id pen
             </p>
           </div>
           <div class="card">
             <div class="card-logo">
-              <img src="" alt="" />
+              <img src="./images/integrity-img.png" alt="" />
             </div>
             <h5>Collaboration</h5>
-            <p>
+            <p class="common-pera-14">
               Displaying the highest level of Integrity in the way we conduct
               our business
             </p>
           </div>
           <div class="card">
             <div class="card-logo">
-              <img src="" alt="" />
+              <img src="./images/technology-img.png" alt="" />
             </div>
             <h5>Technology</h5>
-            <p>
+            <p class="common-pera-14">
               Harnessing the power of Technology to deliver better customer
               experience
             </p>
           </div>
           <div class="card">
             <div class="card-logo">
-              <img src="" alt="" />
+              <img src="./images/corporate-img.png" alt="" />
             </div>
             <h5>Corporate</h5>
-            <p>
+            <p class="common-pera-14">
               Setting the standard for the best Corporate Citizenship in the
               communities we work
             </p>
           </div>
           <div class="card">
             <div class="card-logo">
-              <img src="" alt="" />
+              <img src="./images/digital-img.png" alt="" />
             </div>
             <h5>Digital</h5>
-            <p>
+            <p class="common-pera-14">
               Setting the standard for the best Corporate Citizenship in the
               communities we work
             </p>
