--- a/index.html
+++ b/index.html
@@ -38,7 +38,55 @@
           </div>
         </div>
       </div>
-      <main class=".container"></main>
+      <main class="container">
+        <div class="main-content">
+          <h1>
+            <span>Chase Your</span>
+            <span>Dream with us</span>
+          </h1>
+          <p>
+            <span>The harder you work for something, the greater</span> 
+            <span>you’ll feel when you achieve it.</span>
+          </p>
+
+          <div class="btn-wrap">
+            <button class="btn">
+              <a href="">Apply Online</a>
+            </button>
+            <button class="btn loan-calculator">
+              <a href="">Loan Caclulator</a>
+            </button>
+          </div>
+          <div class="contact-wrap">
+            <a class="phone" href="">
+              <span><i class="fa-solid fa-phone"></i></span>
+              <span>16519</span>
+            </a>
+            <ul class="contact">
+              <li>
+                <a href="">
+                  <i class="fa-brands fa-facebook-f"></i>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa-brands fa-youtube"></i>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa-brands fa-linkedin"></i>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </main>
     </header>
 
     <!-- Customer Experience -->
@@ -71,14 +119,18 @@
               <img src="./images/demonstrate-img.png" alt="" />
             </div>
             <h5>Demonstrate</h5>
-            <p class="common-pera-14">Demonstrating a strong Will to Win in the market place</p>
+            <p class="common-pera-14">
+              Demonstrating a strong Will to Win in the market place
+            </p>
           </div>
           <div class="card">
             <div class="card-logo">
               <img src="./images/diversity-img.png" alt="" />
             </div>
             <h5>Diversity</h5>
-            <p class="common-pera-14">Promoting Diversity in the work place and community</p>
+            <p class="common-pera-14">
+              Promoting Diversity in the work place and community
+            </p>
           </div>
           <div class="card">
             <div class="card-logo">
@@ -329,7 +381,7 @@
             <span>Be A Success. Microsoft</span>
             <span>Patch</span>
           </p>
-          <ul>
+          <ul class="contact">
             <li>
               <a href="">
                 <i class="fa-brands fa-facebook-f"></i>
