setup fixed navber

--- a/index.html
+++ b/index.html
@@ -441,6 +441,11 @@
       </div>
     </footer>
 
+    <!-- Top Link -->
+    <a class="scroll-link top-link" href="#home">
+      <i class="fas fa-arrow-up"></i>
+    </a>
+
     <!-- Font Awasome -->
     <script
       src="https://kit.fontawesome.com/6a0418856e.js"
