add main sec images

--- a/index.html
+++ b/index.html
@@ -38,55 +38,66 @@
           </div>
         </div>
       </div>
-      <main class="container">
-        <div class="main-content">
-          <h1>
-            <span>Chase Your</span>
-            <span>Dream with us</span>
-          </h1>
-          <p>
-            <span>The harder you work for something, the greater</span> 
-            <span>you’ll feel when you achieve it.</span>
-          </p>
+      <main>
+        <div class="container">
+          <div class="main-content">
+            <h1>
+              <span>Chase Your</span>
+              <span>Dream with us</span>
+            </h1>
+            <p>
+              <span>The harder you work for something, the greater</span>
+              <span>you’ll feel when you achieve it.</span>
+            </p>
 
-          <div class="btn-wrap">
-            <button class="btn">
-              <a href="">Apply Online</a>
-            </button>
-            <button class="btn loan-calculator">
-              <a href="">Loan Caclulator</a>
-            </button>
-          </div>
-          <div class="contact-wrap">
-            <a class="phone" href="">
-              <span><i class="fa-solid fa-phone"></i></span>
-              <span>16519</span>
-            </a>
-            <ul class="contact">
-              <li>
-                <a href="">
-                  <i class="fa-brands fa-facebook-f"></i>
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <i class="fa-brands fa-youtube"></i>
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <i class="fa-brands fa-linkedin"></i>
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <i class="fa-brands fa-instagram"></i>
-                </a>
-              </li>
-            </ul>
+            <div class="btn-wrap">
+              <button class="btn">
+                <a href="">Apply Online</a>
+              </button>
+              <button class="btn loan-calculator">
+                <a href="">Loan Caclulator</a>
+              </button>
+            </div>
+            <div class="contact-wrap">
+              <a class="phone" href="">
+                <span><i class="fa-solid fa-phone"></i></span>
+                <span>16519</span>
+              </a>
+              <ul class="contact">
+                <li>
+                  <a href="">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <i class="fa-brands fa-youtube"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <i class="fa-brands fa-linkedin"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </main>
+      <div class="family-loan">
+        <div class="main-img-wrap">
+          <div class="content">
+            <div class="img-wrap">
+              <img src="./images/main-img.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
 
     <!-- Customer Experience -->
